--- a/views/Cad_livro.hbs
+++ b/views/Cad_livro.hbs
@@ -12,57 +12,64 @@
     
       <div class="d-flex justify-content-center ">
           <div class="col-8">
-      <form >
+      <form action="/Cad_livro" method="POST">
         <div class="d-flex flex-row ">
         <div class="mb-3 col-4 p-2">
           <label for="nomeLivro" class="form-label">Nome</label>
-          <input type="text" class="form-control" id="nomelivro" >
+          <input type="text" class="form-control" id="nomelivro" name="nomelivro">
           <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
         </div>
         <div class="mb-3 col-4 p-2">
             <label for="nomeAutor" class="form-label">Autor</label>
-            <input type="text" class="form-control" id="nomeAutor" >
+            <input type="text" class="form-control" id="nomeAutor" name="nomeAutor">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
         </div>
         <div class="d-flex flex-row ">
           <div class="mb-3 col-4 p-2">
             <label for="nomeEditora" class="form-label">Editora</label>
-            <input type="text" class="form-control" id="nomeEditora" >
+            <input type="text" class="form-control" id="nomeEditora" name="nomeEditora">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
           <div class="mb-3 col-4 p-2">
             <label for="volume" class="form-label">Volume</label>
-            <input type="text" class="form-control" id="volume" >
+            <input type="text" class="form-control" id="volume" name="volume">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
         </div>
           <div class="d-flex flex-row ">
           <div class="mb-3 col-4 p-2">
             <label for="edicao" class="form-label">Edição</label>
-            <input type="text" class="form-control" id="edicao" >
+            <input type="text" class="form-control" id="edicao" name="edicao">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
           <div class="mb-3 col-4 p-2">
             <label for="categoria" class="form-label">Categoria</label>
-            <input type="text" class="form-control" id="categoria" >
+            <input type="text" class="form-control" id="categoria" name="categoria">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
         </div>
           <div class="d-flex flex-row ">
           <div class="mb-3 col-4 p-2">
             <label for="descricao" class="form-label">Descrição</label>
-            <input type="text" class="form-control" id="descricao" >
+            <input type="text" class="form-control" id="descricao" name="descricao">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
           <div class="mb-3 col-4 p-2">
             <label for="ano" class="form-label">Ano</label>
-            <input type="text" class="form-control" id="ano" >
+            <input type="text" class="form-control" id="ano" name="ano">
+            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+          </div>
+        </div>
+        <div class="d-flex flex-row ">
+          <div class="mb-3 col-4 p-2">
+            <label for="quantidade" class="form-label">Quantidade</label>
+            <input type="text" class="form-control" id="quantidade" name="quantidade">
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
         </div>
           
-        <button type="submit" class="btn btn-primary" id="cadLivro">Submit</button>
+        <button type="submit" class="btn btn-primary" id="btn_cadLivro">Submit</button>
       </form>
     </div>
     </div>
@@ -78,7 +85,7 @@
 
 
 
-    <script src="./js/CadastrarLivro.js"></script>
+    <script src="/public/js/CadastrarLivro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
