Estilização das páginas

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light">
-    <title>Zombie Garden</title>
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <title>Biblioteca</title>
+    <link rel="stylesheet" href="./css/style.css">
 
   </head>
   <body>
