--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Biblioteca</title>
 </head>
-<body >
-  
-      <div class = 'centro'>
-          <div> <h3>Bem vindo ao sistema da sua Biblioteca</h3> </div>
-            <div> <p>Escolha uma opção para começar</p></div>
-                <div><ul>
-                    <li><a href="./EmprestarLivro.html">Emprestar Livro</a></li>
-                    <li><a href="./Devolver_livro.html">Devolver livro</a></li>
-                    <li><a href="./Cad_user.html">Cadastro de usuario</a></li>
-                    <li><a href="./Cad_livro.html">Cadastro de livro</a></li>
-                    <li><a href="./list_status.html">Consultar status usuario</a></li>
-                    <li><a href="./list_pendencia.html">Consultar lista de pendencia</a></li>
-                
-                    </ul>
+
+<body>
+
+    <div class="d-flex justify-content-center m-5">
+        <div id="carouselExampleCaptions" class=" m-5 carousel slide w-75 h-75 border" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/images/biblioteca3.jpg" class="d-block w-100 " style="height:500px;" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Conheça nossa biblioteca</h5>
+                    </div>
                 </div>
+                <div class="carousel-item">
+                    <img src="/images/biblioteca1.jpg" class="d-block w-100" style="height:500px;" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Livros novos toda segunda-feira</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/biblioteca2.jpg" class="d-block w-100 " style="height:500px;" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/biblioteca.jpg" class="d-block w-100 " style="height:500px;" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Uma sessão infantil incrível!</h5>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 
 
-
-
-    </div> 
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
