--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,31 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light row">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Home</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light row ">
+        <div class="container-fluid ">
+          <a class="navbar-brand m-4 fs-4" href="/">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="./EmprestarLivro">Emprestar Livro</a>
+                <li class="nav-item m-4">
+                    <a class="nav-link fs-6 " href="./EmprestarLivro">Emprestar Livro</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Devolver_livro">Devolver Livro</a>
+                  <li class="nav-item m-4">
+                    <a class="nav-link fs-6" href="./Devolver_livro">Devolver Livro</a>
                   </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./user_register">Cadastro de usuario</a>
+              <li class="nav-item m-4">
+                <a class="nav-link fs-6" aria-current="page" href="./user_register">Cadastro de usuario</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./Cad_livro">Cadastro de Livro</a>
+              <li class="nav-item m-4">
+                <a class="nav-link fs-6" href="./Cad_livro">Cadastro de Livro</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./list_status">Consultar Status usuario</a>
+              <li class="nav-item m-4">
+                <a class="nav-link fs-6" href="./list_status">Consultar Status usuario</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./list_pendencia">Consultar lista de pendencia</a>
-              </li>
-              
-              
+              <li class="nav-item m-4">
+                <a class="nav-link fs-6" href="./list_pendencia">Consultar lista de pendencia</a>
+              </li>  
             </ul>
           </div>
         </div>
