--- a/views/Devolver_livro.hbs
+++ b/views/Devolver_livro.hbs
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Biblioteca</title>
 </head>
-<body >
-     
-      <form >
-        <div class="d-flex flex-row ">
-            <div class="mb-3 col-4 p-2">
-                <label for="id_livro" class="form-label">Id livro</label>
-                <input type="text" class="form-control" id="id_livro" >
-                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+
+<body>
+
+
+    <div class="mt-5 d-flex justify-content-around">
+        <form class="card col-8 card-shadow p-2">
+            <div class="row d-flex justify-content-around">
+                <div class="mb-3 col-4 p-2">
+                    <label for="id_livro" class="form-label">Id livro</label>
+                    <input type="text" class="form-control" id="id_livro">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+                <div class="mb-3 col-4 p-2">
+                    <label for="CPF" class="form-label">CPF do usuario</label>
+                    <input type="text" class="form-control" id="CPF">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
             </div>
-            <div class="mb-3 col-4 p-2">
-                <label for="CPF" class="form-label">CPF do usuario</label>
-                <input type="text" class="form-control" id="CPF" >
-                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+
+            <div class=" d-flex justify-content-center my-5 ">
+                <button type="submit" class="btn btn-color" id="btn_devolver">Submit</button>
             </div>
-        </div>
-  
-          
-        <button type="submit" class="btn btn-primary" id = "btn_devolver">Submit</button>
-      </form>
-
-
-
+        </form>
+    </div>
 
 
     <script src="./js/DevolverLivro.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
