--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-
+    <div class="d-flex justify-content-center card text-center">
+        <h3 class="mt-3">Bem-vindo à biblioteca</h3>
+        <h1>LoveGood!</h1>
+    </div>
+    
     <div class="d-flex justify-content-center m-5">
-        <div id="carouselExampleCaptions" class=" m-5 carousel slide w-75 h-75 border" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class=" carousel slide w-75 h-75 border" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
