--- a/views/list_pendencia.hbs
+++ b/views/list_pendencia.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Biblioteca</title>
 </head>
-<body class = 'justify-content-center'>
+<body >
     
 
 
