--- a/views/user_register.hbs
+++ b/views/user_register.hbs
@@ -2,70 +2,69 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Biblioteca</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Biblioteca</title>
 </head>
 
-<body class='justify-content-center'>
+<body>
 
 
-  <div class="d-flex justify-content-center ">
-    <div class="col-8">
-      <form action="/user_register" method="POST">
-        <div class="d-flex flex-row ">
-          <div class="mb-3 col-4 p-2">
-            <label for="nomeUsuario" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="nomeUsuario" name="nomeUsuario">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-          </div>
-          <div class="mb-3 col-4 p-2">
-            <label for="CPF" class="form-label">CPF</label>
-            <input type="text" class="form-control" id="CPF" name="CPF">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-          </div>
-        </div>
-        <div class="d-flex flex-row ">
-          <div class="mb-3 col-4 p-2">
-            <label for="Telefone" class="form-label">Telefone</label>
-            <input type="tel" class="form-control" id="Telefone" name="Telefone">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-          </div>
-          <div class="mb-3 col-4 p-2">
-            <label for="emailUsuario" class="form-label">Email</label>
-            <input type="email" class="form-control" id="emailUsuario" name="emailUsuario">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-          </div>
-        </div>
-        <div class="d-flex flex-row " id="divPaiCheck_aluno">
-          <div class="mb-3 col-4 p-2">
-            <label for="endereco" class="form-label">Endereço</label>
-            <input type="text" class="form-control" id="endereco" name="endereco">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-            
-            <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="Switch_aluno">
-              <label class="form-check-label" for="flexSwitchCheckDefault">Usuario do tipo aluno</label>
+    <div class="mt-5 d-flex justify-content-around ">
+        <form class="card col-8 card-shadow p-2 " action="/user_register" method="POST">
+            <div class="row d-flex justify-content-center">
+                <div class="mb-3 col-4 p-2">
+                    <label for="nomeUsuario" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nomeUsuario" name="nomeUsuario">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+                <div class="mb-3 col-4 p-2">
+                    <label for="CPF" class="form-label">CPF</label>
+                    <input type="text" class="form-control" id="CPF" name="CPF">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
             </div>
+            <div class="row d-flex justify-content-center">
+                <div class="mb-3 col-4 p-2">
+                    <label for="Telefone" class="form-label">Telefone</label>
+                    <input type="tel" class="form-control" id="Telefone" name="Telefone">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+                <div class="mb-3 col-4 p-2">
+                    <label for="emailUsuario" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="emailUsuario" name="emailUsuario">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
             </div>
-            <div class="mb-3 col-4 p-2" id="matricula_aluno_form">
-              <label for="matricula_aluno" class="form-label">Matricula:</label>
-              <input type="text" class="form-control" id="matricula_aluno" name="matricula_aluno">
+            <div class="row d-flex justify-content-center" id="divPaiCheck_aluno">
+                <div class="mb-3 col-4 p-2">
+                    <label for="endereco" class="form-label">Endereço</label>
+                    <input type="text" class="form-control" id="endereco" name="endereco">
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
 
-            
-          </div>
-        </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="Switch_aluno">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Usuario do tipo aluno</label>
+                    </div>
+                </div>
+                <div class="mb-3 col-4 p-2" id="matricula_aluno_form">
+                    <label for="matricula_aluno" class="form-label">Matricula:</label>
+                    <input type="text" class="form-control" id="matricula_aluno" name="matricula_aluno">
 
 
+                </div>
+            </div>
 
-        <button type="submit" class="btn btn-primary" id="btn_cadUser">Submit</button>
-      </form>
+            <div class=" d-flex justify-content-center my-5 ">
+                <button type="submit" class="btn btn-color" id="btn_cadUser">Submit</button>
+            </div>
+
+        </form>
     </div>
-  </div>
 
 
 
@@ -77,10 +76,10 @@
 
 
 
-  <script src="/js/CadastrarUsuario.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-    crossorigin="anonymous"></script>
+    <script src="/js/CadastrarUsuario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
