Mensssagem de atualizaçao do banco

--- a/views/Devolver_livro.hbs
+++ b/views/Devolver_livro.hbs
@@ -15,16 +15,16 @@
 
 
     <div class="mt-5 d-flex justify-content-around">
-        <form class="card col-8 card-shadow p-2">
+        <form class="card col-8 card-shadow p-2" action="/Devolver_livro" method="POST">
             <div class="row d-flex justify-content-around">
                 <div class="mb-3 col-4 p-2">
                     <label for="id_livro" class="form-label">Id livro</label>
-                    <input type="text" class="form-control" id="id_livro">
+                    <input type="text" class="form-control" id="dvr_id_livro" name="dvr_id_livro">
                     <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="CPF" class="form-label">CPF do usuario</label>
-                    <input type="text" class="form-control" id="CPF">
+                    <input type="text" class="form-control" id="dvr_CPF" name="dvr_CPF">
                     <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                 </div>
             </div>
