--- a/views/Cad_livro.hbs
+++ b/views/Cad_livro.hbs
@@ -19,47 +19,47 @@
             <div class="row d-flex justify-content-center">
                 <div class="mb-3 col-4 p-2">
                     <label for="nomeLivro" class="form-label">Nome</label>
-                    <input type="text" class="form-control" id="nomelivro" name="nomelivro">
+                    <input type="text" class="form-control" id="cad_nomelivro" name="cad_nomelivro">
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="nomeAutor" class="form-label">Autor</label>
-                    <input type="text" class="form-control" id="nomeAutor" name="nomeAutor">
+                    <input type="text" class="form-control" id="cad_nomeAutor" name="cad_nomeAutor">
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="mb-3 col-4 p-2">
                     <label for="nomeEditora" class="form-label">Editora</label>
-                    <input type="text" class="form-control" id="nomeEditora" name="nomeEditora">
+                    <input type="text" class="form-control" id="cad_nomeEditora" name="cad_nomeEditora">
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="volume" class="form-label">Volume</label>
-                    <input type="text" class="form-control" id="volume" name="volume">
+                    <input type="text" class="form-control" id="cad_volume" name="cad_volume">
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="mb-3 col-4 p-2">
                     <label for="edicao" class="form-label">Edição</label>
-                    <input type="text" class="form-control" id="edicao" name="edicao">
+                    <input type="text" class="form-control" id="cad_edicao" name="cad_edicao">
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="categoria" class="form-label">Categoria</label>
-                    <input type="text" class="form-control" id="categoria" name="categoria">
+                    <input type="text" class="form-control" id="cad_categoria" name="cad_categoria">
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="mb-3 col-4 p-2">
                     <label for="descricao" class="form-label">Descrição</label>
-                    <input type="text" class="form-control" id="descricao" name="descricao">
+                    <input type="text" class="form-control" id="cad_descricao" name="cad_descricao">
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="ano" class="form-label">Ano</label>
-                    <input type="text" class="form-control" id="ano" name="ano">
+                    <input type="text" class="form-control" id="cad_ano" name="cad_ano">
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="mb-3 col-4 p-2">
                     <label for="quantidade" class="form-label">Quantidade</label>
-                    <input type="text" class="form-control" id="quantidade" name="quantidade">
+                    <input type="text" class="form-control" id="cad_quantidade" name="cad_quantidade">
                 </div>
             </div>
 
@@ -68,19 +68,6 @@
             </div>
         </form>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="/public/js/CadastrarLivro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
