--- a/views/EmprestarLivro.hbs
+++ b/views/EmprestarLivro.hbs
@@ -14,17 +14,17 @@
 <body>
     <div class="mt-5 d-flex justify-content-around">
 
-        <form class="card col-8 card-shadow p-2">
+        <form class="card col-8 card-shadow p-2" action="/EmprestarLivro" method="POST">
             <div class="row d-flex justify-content-around">
 
                 <div class="mb-3 col-4 p-2">
                     <label for="id_livro" class="form-label">Id livro</label>
-                    <input type="text" class="form-control" id="id_livro">
+                    <input type="text" class="form-control" id="emp_id_livro" name="emp_id_livro">
                 </div>
 
                 <div class="mb-3 col-4 p-2">
                     <label for="CPF" class="form-label">CPF do usuario</label>
-                    <input type="text" class="form-control" id="CPF">
+                    <input type="text" class="form-control" id="emp_CPF" name="emp_CPF">
                 </div>
 
             </div>
