--- a/views/list_status.hbs
+++ b/views/list_status.hbs
@@ -15,15 +15,15 @@
 
     <div class="mt-5 d-flex justify-content-around ">
 
-        <form class="card col-8 card-shadow p-2 ">
+        <form class="card col-8 card-shadow p-2 " action="/EmprestarLivro" method="POST">
             <div class="row d-flex justify-content-center ">
                 <div class="mb-3 col-4 p-2">
                     <label for="nomeUsuario" class="form-label">Nome</label>
-                    <input type="text" class="form-control" id="nomeUsuario">
+                    <input type="text" class="form-control" id="consulta_nomeUsuario" name="consulta_nomeUsuario">
                 </div>
                 <div class="mb-3 col-4 p-2">
                     <label for="CPF" class="form-label">CPF</label>
-                    <input type="text" class="form-control" id="CPF">
+                    <input type="text" class="form-control" id="consulta_CPF" name="consulta_CPF">
                 </div>
             </div>
 
