--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,10 +20,16 @@
                     <a class="nav-link" href="./Cad_livro">Cadastro de Livro</a>
                 </li>
                 <li class="nav-item m-3">
-                    <a class="nav-link" href="./list_status">Consultar Status usuario</a>
+                    <a class="nav-link" href="./list_status">Status usuario</a>
                 </li>
                 <li class="nav-item m-3">
-                    <a class="nav-link" href="./list_pendencia">Consultar lista de pendencia</a>
+                    <a class="nav-link" href="./list_pendencia">Lista de pendencia</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./lista_ultimoDia">Emprestimos</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./listaDeLivros">Livros</a>
                 </li>
             </ul>
         </div>
