--- a/views/partials/header_aluno.hbs
+++ b/views/partials/header_aluno.hbs
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light row ">
-        <div class="container-fluid ">
-          <a class="navbar-brand m-4 fs-4" href="/">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item m-4">
-                    <a class="nav-link fs-6 " href="./reserva_livro">Reservar Livro</a>
-                  </li>
-                  <li class="nav-item m-4">
-                    <a class="nav-link fs-6" href="./renovar_livro">Renovar Emprestimo</a>
-                  </li>
-              <li class="nav-item m-4">
-                <a class="nav-link fs-6" aria-current="page" href="./consultar_datas">Consultar Datas</a>
-              </li>
-            </ul>
-          </div>
-        </div>
 
-      </nav>
+<nav class="navbar navbar-expand-lg nav-color row ">
+    <div class="container-fluid ">
+        <a class="navbar-brand m-3 fs-4" href="/index_aluno">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./reservar_livro">Reservar Livro</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./renovar_livro">Renovar Emprestimo</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" aria-current="page" href="./consultar_datas">Consultar Datas</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./listaDeLivros_aluno">Lista de livros</a>
+
+            </ul>
+        </div>
+    </div>
+</nav>
