--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg nav-color row ">
     <div class="container-fluid ">
-        <a class="navbar-brand m-3 fs-4" href="/">Home</a>
+        <a class="navbar-brand m-3 fs-5" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,9 @@
                 </li>
                 <li class="nav-item m-3">
                     <a class="nav-link" href="./listaDeLivros">Livros</a>
+                </li>
+                <li class="nav-item m-3">
+                    <a class="nav-link" href="./listaDeReservas">Reservas</a>
                 </li>
             </ul>
         </div>
